feito com alguns erros

--- a/src/components/episode/style.css
+++ b/src/components/episode/style.css
@@ -49,6 +49,10 @@
 #episodeSeason{
     color: white;
 }
+.swiper-slide{
+    width: auto !important;
+    margin-right: 2vh;
+}
 .btn{
     display: flex;
     align-items: center;
