--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -18,9 +18,9 @@
     font-size: 1.2rem;
     width: 100%;
     height: 90vh;
-    background-position:top;
+    background-position:center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover
 }
 #episodioAtual h1{
     text-shadow: 2px 2px 3px #000000;
@@ -53,7 +53,6 @@
     height: 13vW;
     top: auto;
     top: 70%;
-    
     z-index: 8;
     position: absolute;
     left: 0;
@@ -261,4 +260,13 @@
     #boxEpisodioAtual{
         height: 15vw;
     }
+}
+.swiper-button-next{
+    color: #dd2121  !important;
+}
+.swiper-button-prev{
+    color: #dd2121  !important;
+}
+.swiper-button-disabled{
+    color: #000 !important;
 }
