--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,9 @@
 }
 body {
     width: 100%;
-    height: auto;
     margin: 0;
     padding: 0;
-    overflow: auto;
+    position: relative;
     background-color: rgba(20,20,20,1);
 }
 main{
